@@ -1,6 +1,8 @@
 20020912
  - (djm) Added getpeereid() replacement. Properly implemented for systems
    with SO_PEERCRED support. Faked for systems which lack it.
+ - (djm) Sync sys/tree.h with OpenBSD -current. Rename tree.h and 
+   fake-queue.h to sys-tree.h and sys-queue.h
  - (djm) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2002/09/08 20:24:08
      [hostfile.h]
@@ -1651,4 +1653,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2460 2002/09/12 00:34:13 djm Exp $
+$Id: ChangeLog,v 1.2461 2002/09/12 00:43:29 djm Exp $
